# security-sandbox

./: .gitignore  .gitmodules  Dockerfile  Makefile  README.md  pyproject.toml  run_docker.sh
configs/: lidar_fp_attacker.yml  lidar_passthrough.yml  lidar_rev_replay_attacker.yml
data/: download_attack_traces.sh
runnables/: run_lidar_attacker.py  run_test_lidar_client.py  run_test_lidar_server.py  socket_utils.py
