[tool.poetry]
name = "security-sandbox"
version = "0.1.0-alpha.1"
description = "Sandbox for security analysis in autonomous vehicles"
authors = ["Spencer Hallyburton <spencer.hallyburton@duke.edu>"]
readme = "README.md"
license = "MIT"
homepage = "https://avstack.org"
repository = "https://github.com/avstack-lab/security-sandbox"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
]
keywords = ["security", "autonomy", "autonomous vehicles"]

[tool.poetry.dependencies]
python = "~3.8"
torch = { url = "https://download.pytorch.org/whl/cu113/torch-1.10.0%2Bcu113-cp38-cp38-linux_x86_64.whl" }
lib-avstack-api = { path = "submodules/lib-avstack-api", develop = true }
lib-avstack-core = { path = "submodules/lib-avstack-core", develop = true }
lib-avsec = { path = "submodules/lib-avsec", develop = true }

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
seaborn = "^0.12.2"

[tool.poetry.group.test.dependencies]
pytest = "^7"
pytest-cov = "^4"
bandit = "^1.7"
black = "~22.12.0"
mypy = "^0"
isort = "^5.11"
flake8 = "^5.0"
snakeviz="^2.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q -s -l"
testpaths = [
    "tests",
    "integration",
]
